--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "dc-rank",
   "version": "1.0.0",
+  "description": "Discord bot for managing Roblox group ranks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.7.4",
+    "axios": "^1.7.3",
+    "discord.js": "^14.8.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
