--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "dc-rank",
   "version": "1.0.0",
-  "description": "A Discord bot to manage ranks in a Roblox group",
+  "description": "Discord bot to manage Roblox ranks via commands.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": ["discord", "bot", "roblox", "rank"],
-  "author": "amagineLost",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.7.3",
+    "discord.js": "^14.6.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "discord.js": "^14.0.0"
-  }
+    "express": "^4.19.2"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
+
