--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "dc-rank",
   "version": "1.0.0",
-  "description": "Discord bot to manage Roblox ranks via commands.",
+  "description": "A Discord bot that manages Roblox group ranks",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "discord.js": "^14.6.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "axios": "^1.4.0",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "author": "Your Name",
-  "license": "ISC"
+  "license": "MIT"
 }
-
